--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.1.0",
     "gulp-stylus": "^2.1.0",
-    "gulp-uncss": "^1.0.4"
+    "gulp-uncss": "^1.0.4",
+    "imagemin-pngquant": "^4.2.2"
   },
-  "author": "Anatoly88"
+  "author": "Anatoly88",
+  "dependencies": {
+    "imagemin-pngquant": "^4.2.2"
+  }
 }
