--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "gulp-template",
   "version": "1.0.0",
   "devDependencies": {
+    "browser-sync": "^2.11.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-connect": "^2.2.0",
+    "gulp-cache": "^0.4.3",
+    "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-stylus": "^2.1.0",
+    "gulp-uglifyjs": "^0.6.2",
     "gulp-uncss": "^1.0.4",
     "imagemin-pngquant": "^4.2.2"
   },
