--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "gulp-cache": "^0.4.3",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.4.0",
-    "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
+    "gulp-pug": "^3.0.3",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
     "gulp-stylus": "^2.1.0",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-uncss": "^1.0.4",
