--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.1.0",
